--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=NauJava3
+
+app.name=Personal Finance Manager
+app.version=1.0.0
+management.endpoints.web.exposure.include=*
