--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,8 +4,11 @@ app.name=Personal Finance Manager
 app.version=1.0.0
 management.endpoints.web.exposure.include=*
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/finance-naumen
+spring.datasource.url=jdbc:postgresql://localhost:5432/finance-naumen-test
 spring.datasource.username=postgres
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
